fix: Fix date/time related runtime code so fields show up correctly in UI